fix: ドキュメントに微修正を加える
