# app/project_handler.go
@@ -2,8 +2,6 @@ package app
 
 import (
 	"context"
-	"fmt"
-	"net/url"
 	"time"
 
 	"github.com/minguu42/mtasks/app/logging"
@@ -15,24 +13,22 @@ func (h *handler) CreateProject(ctx context.Context, req *ogen.CreateProjectReq)
 	u, ok := ctx.Value(userKey{}).(*User)
 	if !ok {
 		logging.Errorf("ctx.Value(userKey{}).(*User) failed")
-		return &ogen.CreateProjectInternalServerError{}, nil
+		return &ogen.CreateProjectInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   "ctx.Value(userKey{}).(*User) failed",
+		}, nil
 	}
 
 	p, err := h.repository.CreateProject(ctx, u.ID, req.Name)
 	if err != nil {
 		logging.Errorf("repository.CreateProject failed: %v", err)
-		return &ogen.CreateProjectInternalServerError{}, nil
+		return &ogen.CreateProjectInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   err.Error(),
+		}, nil
 	}
 
-	location, err := url.ParseRequestURI(fmt.Sprintf("http://localhost:8080/projects/%d", p.ID))
-	if err != nil {
-		logging.Errorf("url.ParseRequestURI failed: %v", err)
-		return &ogen.CreateProjectInternalServerError{}, nil
-	}
-	return &ogen.ProjectHeaders{
-		Location: *location,
-		Response: newProjectResponse(p),
-	}, nil
+	return newProjectResponse(p), nil
 }
 
 // ListProjects は GET /projects に対応するハンドラ
@@ -40,13 +36,19 @@ func (h *handler) ListProjects(ctx context.Context, params ogen.ListProjectsPara
 	u, ok := ctx.Value(userKey{}).(*User)
 	if !ok {
 		logging.Errorf("ctx.Value(userKey{}).(*User) failed")
-		return &ogen.ListProjectsInternalServerError{}, nil
+		return &ogen.ListProjectsInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   "ctx.Value(userKey{}).(*User) failed",
+		}, nil
 	}
 
 	ps, err := h.repository.GetProjectsByUserID(ctx, u.ID, string(params.Sort.Or(ogen.ListProjectsSortMinusCreatedAt)), params.Limit.Or(10), params.Offset.Or(0))
 	if err != nil {
 		logging.Errorf("repository.GetProjectsByUserID failed: %v", err)
-		return &ogen.ListProjectsInternalServerError{}, nil
+		return &ogen.ListProjectsInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   err.Error(),
+		}, nil
 	}
 
 	return &ogen.Projects{Projects: newProjectsResponse(ps)}, nil
@@ -57,33 +59,48 @@ func (h *handler) UpdateProject(ctx context.Context, req *ogen.UpdateProjectReq,
 	u, ok := ctx.Value(userKey{}).(*User)
 	if !ok {
 		logging.Errorf("ctx.Value(userKey{}).(*User) failed")
-		return &ogen.UpdateProjectInternalServerError{}, nil
+		return &ogen.UpdateProjectInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   "ctx.Value(userKey{}).(*User) failed",
+		}, nil
 	}
 
 	p, err := h.repository.GetProjectByID(ctx, params.ProjectID)
 	if err != nil {
 		logging.Errorf("repository.GetProjectByID failed: %v", err)
-		return &ogen.UpdateProjectInternalServerError{}, nil
+		return &ogen.UpdateProjectInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   err.Error(),
+		}, nil
 	}
 
 	if u.ID != p.UserID {
 		logging.Errorf("u.ID != p.UserID")
-		return &ogen.UpdateProjectNotFound{}, nil
+		return &ogen.UpdateProjectNotFound{
+			Message: messageNotFound,
+			Debug:   err.Error(),
+		}, nil
 	}
 
 	if !req.Name.IsSet() {
 		logging.Errorf("value contains nothing")
-		return &ogen.UpdateProjectBadRequest{}, nil
+		return &ogen.UpdateProjectBadRequest{
+			Message: messageBadRequest,
+			Debug:   err.Error(),
+		}, nil
 	}
+
 	p.Name = req.Name.Value
 	p.UpdatedAt = time.Now()
 	if err := h.repository.UpdateProject(ctx, params.ProjectID, p.Name, p.UpdatedAt); err != nil {
 		logging.Errorf("repository.UpdateProject failed: %v", err)
-		return &ogen.UpdateProjectInternalServerError{}, nil
+		return &ogen.UpdateProjectInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   err.Error(),
+		}, nil
 	}
 
-	resp := newProjectResponse(p)
-	return &resp, nil
+	return newProjectResponse(p), nil
 }
 
 // DeleteProject は DELETE /projects/{projectID} に対応するハンドラ
@@ -91,23 +108,35 @@ func (h *handler) DeleteProject(ctx context.Context, params ogen.DeleteProjectPa
 	u, ok := ctx.Value(userKey{}).(*User)
 	if !ok {
 		logging.Errorf("ctx.Value(userKey{}).(*User) failed")
-		return &ogen.DeleteProjectInternalServerError{}, nil
+		return &ogen.DeleteProjectInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   "ctx.Value(userKey{}).(*User) failed",
+		}, nil
 	}
 
 	p, err := h.repository.GetProjectByID(ctx, params.ProjectID)
 	if err != nil {
 		logging.Errorf("repository.GetProjectByID failed: %v", err)
-		return &ogen.DeleteProjectInternalServerError{}, nil
+		return &ogen.DeleteProjectInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   err.Error(),
+		}, nil
 	}
 
 	if u.ID != p.UserID {
 		logging.Errorf("u.ID != p.UserID")
-		return &ogen.DeleteProjectNotFound{}, nil
+		return &ogen.DeleteProjectNotFound{
+			Message: messageNotFound,
+			Debug:   err.Error(),
+		}, nil
 	}
 
 	if err := h.repository.DeleteProject(ctx, p.ID); err != nil {
 		logging.Errorf("repository.DeleteProject failed: %v", err)
-		return &ogen.DeleteProjectInternalServerError{}, nil
+		return &ogen.DeleteProjectInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   err.Error(),
+		}, nil
 	}
 
 	return &ogen.DeleteProjectNoContent{}, nil
