# app/task_handler.go
@@ -2,8 +2,6 @@ package app
 
 import (
 	"context"
-	"fmt"
-	"net/url"
 	"time"
 
 	"github.com/minguu42/mtasks/app/logging"
@@ -15,34 +13,38 @@ func (h *handler) CreateTask(ctx context.Context, req *ogen.CreateTaskReq, param
 	u, ok := ctx.Value(userKey{}).(*User)
 	if !ok {
 		logging.Errorf("ctx.Value(userKey{}).(*User) failed")
-		return &ogen.CreateTaskInternalServerError{}, nil
+		return &ogen.CreateTaskInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   "ctx.Value(userKey{}).(*User) failed",
+		}, nil
 	}
 
 	p, err := h.repository.GetProjectByID(ctx, params.ProjectID)
 	if err != nil {
 		logging.Errorf("repository.GetProjectByID failed: %v", err)
-		return &ogen.CreateTaskInternalServerError{}, nil
+		return &ogen.CreateTaskInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   err.Error(),
+		}, nil
 	}
 	if u.ID != p.UserID {
 		logging.Errorf("u.ID != p.UserID")
-		return &ogen.CreateTaskNotFound{}, nil
+		return &ogen.CreateTaskNotFound{
+			Message: messageNotFound,
+			Debug:   err.Error(),
+		}, nil
 	}
 
 	t, err := h.repository.CreateTask(ctx, params.ProjectID, req.Title)
 	if err != nil {
 		logging.Errorf("repository.Create failed: %v", err)
-		return &ogen.CreateTaskInternalServerError{}, nil
+		return &ogen.CreateTaskInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   err.Error(),
+		}, nil
 	}
 
-	location, err := url.ParseRequestURI(fmt.Sprintf("http://localhost:8080/projects/%d/tasks/%d", params.ProjectID, t.ID))
-	if err != nil {
-		logging.Errorf("url.ParseRequestURI failed: %v", err)
-		return &ogen.CreateTaskInternalServerError{}, nil
-	}
-	return &ogen.TaskHeaders{
-		Location: *location,
-		Response: newTaskResponse(t),
-	}, nil
+	return newTaskResponse(t), nil
 }
 
 // ListTasks は GET /projects/{projectID}/tasks に対応するハンドラ
@@ -50,23 +52,35 @@ func (h *handler) ListTasks(ctx context.Context, params ogen.ListTasksParams) (o
 	u, ok := ctx.Value(userKey{}).(*User)
 	if !ok {
 		logging.Errorf("ctx.Value(userKey{}).(*User) failed")
-		return &ogen.ListTasksInternalServerError{}, nil
+		return &ogen.ListTasksInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   "ctx.Value(userKey{}).(*User) failed",
+		}, nil
 	}
 
 	p, err := h.repository.GetProjectByID(ctx, params.ProjectID)
 	if err != nil {
 		logging.Errorf("repository.GetProjectByID failed: %v", err)
-		return &ogen.ListTasksInternalServerError{}, nil
+		return &ogen.ListTasksInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   err.Error(),
+		}, nil
 	}
 	if u.ID != p.UserID {
 		logging.Errorf("u.ID != p.UserID")
-		return &ogen.ListTasksNotFound{}, nil
+		return &ogen.ListTasksNotFound{
+			Message: messageNotFound,
+			Debug:   err.Error(),
+		}, nil
 	}
 
 	ts, err := h.repository.GetTasksByProjectID(ctx, p.ID, string(params.Sort.Or(ogen.ListTasksSortMinusCreatedAt)), params.Limit.Or(10), params.Offset.Or(0))
 	if err != nil {
 		logging.Errorf("repository.GetTasksByProjectID failed: %v", err)
-		return &ogen.ListTasksInternalServerError{}, nil
+		return &ogen.ListTasksInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   err.Error(),
+		}, nil
 	}
 
 	return &ogen.Tasks{Tasks: newTasksResponse(ts)}, nil
@@ -77,31 +91,49 @@ func (h *handler) UpdateTask(ctx context.Context, req *ogen.UpdateTaskReq, param
 	u, ok := ctx.Value(userKey{}).(*User)
 	if !ok {
 		logging.Errorf("ctx.Value(userKey{}).(*User) failed")
-		return &ogen.UpdateTaskInternalServerError{}, nil
+		return &ogen.UpdateTaskInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   "ctx.Value(userKey{}).(*User) failed",
+		}, nil
 	}
 
 	p, err := h.repository.GetProjectByID(ctx, params.ProjectID)
 	if err != nil {
 		logging.Errorf("repository.GetProjectByID failed: %v", err)
-		return &ogen.UpdateTaskInternalServerError{}, nil
+		return &ogen.UpdateTaskInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   err.Error(),
+		}, nil
 	}
 	if u.ID != p.UserID {
 		logging.Errorf("u.ID != p.UserID")
-		return &ogen.UpdateTaskNotFound{}, nil
+		return &ogen.UpdateTaskNotFound{
+			Message: messageNotFound,
+			Debug:   err.Error(),
+		}, nil
 	}
 	t, err := h.repository.GetTaskByID(ctx, params.TaskID)
 	if err != nil {
 		logging.Errorf("repository.GetTaskByID failed: %v", err)
-		return &ogen.UpdateTaskInternalServerError{}, nil
+		return &ogen.UpdateTaskInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   err.Error(),
+		}, nil
 	}
 	if p.ID != t.ProjectID {
 		logging.Errorf("p.ID != t.ProjectID")
-		return &ogen.UpdateTaskNotFound{}, nil
+		return &ogen.UpdateTaskNotFound{
+			Message: messageNotFound,
+			Debug:   err.Error(),
+		}, nil
 	}
 
 	if !req.IsCompleted.IsSet() {
 		logging.Errorf("value contains nothing")
-		return &ogen.UpdateTaskBadRequest{}, nil
+		return &ogen.UpdateTaskBadRequest{
+			Message: messageBadRequest,
+			Debug:   err.Error(),
+		}, nil
 	}
 	now := time.Now()
 	if req.IsCompleted.Value {
@@ -112,11 +144,13 @@ func (h *handler) UpdateTask(ctx context.Context, req *ogen.UpdateTaskReq, param
 	t.UpdatedAt = now
 	if err := h.repository.UpdateTask(ctx, params.TaskID, t.CompletedAt, t.UpdatedAt); err != nil {
 		logging.Errorf("repository.UpdateTask failed: %v", err)
-		return &ogen.UpdateTaskInternalServerError{}, nil
+		return &ogen.UpdateTaskInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   err.Error(),
+		}, nil
 	}
 
-	resp := newTaskResponse(t)
-	return &resp, nil
+	return newTaskResponse(t), nil
 }
 
 // DeleteTask は DELETE /projects/{projectID}/tasks/{taskID} に対応するハンドラ
@@ -124,31 +158,49 @@ func (h *handler) DeleteTask(ctx context.Context, params ogen.DeleteTaskParams) 
 	u, ok := ctx.Value(userKey{}).(*User)
 	if !ok {
 		logging.Errorf("ctx.Value(userKey{}).(*User) failed")
-		return &ogen.DeleteTaskInternalServerError{}, nil
+		return &ogen.DeleteTaskInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   "ctx.Value(userKey{}).(*User) failed",
+		}, nil
 	}
 
 	p, err := h.repository.GetProjectByID(ctx, params.ProjectID)
 	if err != nil {
 		logging.Errorf("repository.GetProjectByID failed: %v", err)
-		return &ogen.DeleteTaskInternalServerError{}, nil
+		return &ogen.DeleteTaskInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   err.Error(),
+		}, nil
 	}
 	if u.ID != p.UserID {
 		logging.Errorf("u.ID != p.UserID")
-		return &ogen.DeleteTaskNotFound{}, nil
+		return &ogen.DeleteTaskNotFound{
+			Message: messageNotFound,
+			Debug:   err.Error(),
+		}, nil
 	}
 	t, err := h.repository.GetTaskByID(ctx, params.TaskID)
 	if err != nil {
 		logging.Errorf("repository.GetTaskByID failed: %v", err)
-		return &ogen.DeleteTaskInternalServerError{}, nil
+		return &ogen.DeleteTaskInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   err.Error(),
+		}, nil
 	}
 	if p.ID != t.ProjectID {
 		logging.Errorf("p.ID != t.ProjectID")
-		return &ogen.DeleteTaskNotFound{}, nil
+		return &ogen.DeleteTaskNotFound{
+			Message: messageNotFound,
+			Debug:   err.Error(),
+		}, nil
 	}
 
 	if err := h.repository.DeleteTask(ctx, t.ID); err != nil {
 		logging.Errorf("repository.DeleteTask failed: %v", err)
-		return &ogen.DeleteTaskInternalServerError{}, nil
+		return &ogen.DeleteTaskInternalServerError{
+			Message: messageInternalServerError,
+			Debug:   err.Error(),
+		}, nil
 	}
 
 	return &ogen.DeleteTaskNoContent{}, nil
